k8s/local/ingress/service-externalIPs.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  #externalIPs:
      #  - 192.168.0.200 #一个和node同网段的自定义ip，并将业务域名解析到该ip
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: proxy-tcp-22 # 四层代理,与tcp-services(ConfigMap)中的配置相对应
      port: 22
      targetPort: 22
      protocol: TCP
    - name: proxy-tcp-3306 # 四层代理,与tcp-services(ConfigMap)中的配置相对应
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
